--- a/01M-Software_Setup_MacOS_Version.ipynb
+++ b/01M-Software_Setup_MacOS_Version.ipynb
@@ -164,25 +164,23 @@
     "\n",
     "+ Begin by navigating to the [Miniforge GitHub repository](https://github.com/conda-forge/miniforge):\n",
     "\n",
-    "    <img src=\"fig/000-WebAnaconda.PNG\" width=50%/>\n",
-    "\n",
-    "+ Click the download link. When the download finishes, run the Anaconda Installer.\n",
-    "\n",
-    "    <img src=\"fig/001-AnacondaSetup01.PNG\" width=50%/>\n",
+    "    <img src=\"fig/000-WebMiniforge.png\" width=50%/>\n",
     "    \n",
-    "+ In the following setup dialogs you can (and probably should) accept all the defaults. **Be careful with this step!** Unles you have a good reason not to, please leave the first box unmarked, as illustrated here:     \n",
-    "\n",
-    "    <img src=\"fig/001-AnacondaSetup02.PNG\" width=50%/>\n",
-    "    \n",
-    "+ When setup is completed you will see something like this:\n",
-    "\n",
-    "    <img src=\"fig/001-AnacondaSetup03.PNG\" width=50%/>\n",
-    "    \n",
-    "    Click on *Next* and do the same in the final dialogs (consisting in software ads and tutorials, we suggest to skip all of them). \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "I suggest you at least take a look at the first sections. After that, if you skip the Downloads and scroll down to the `Install` section, there is a [subsection called `Homebrew`](https://github.com/conda-forge/miniforge#homebrew). There you will see that all you need to do is open a terminal and run:\n",
+    "```\n",
+    "brew install miniforge\n",
+    "```\n",
+    "Wait for `HomeBrew` to finish setting the miniforge flavor of Python for you. Then in the same terminal execute\n",
+    "```\n",
+    "python\n",
+    "```\n",
+    "and you should see output like this:\n",
+    "```\n",
+    "Python 3.10.5 | packaged by conda-forge | (main, Jun 14 2022, 07:07:06) [Clang 13.0.1 ] on darwin\n",
+    "Type \"help\", \"copyright\", \"credits\" or \"license\" for more information\n",
+    ">>>\n",
+    "```\n",
+    "The `>>>` line is the Python prompt waiting for you. But we will not be using Python this way by now. Therefore simply type `exit()` in the Python prompt and execute it to return to the regular prompt of the MacOS terminal."
    ]
   },
   {
@@ -196,15 +194,7 @@
     "    + [A Guide to Python’s Virtual Environments](https://towardsdatascience.com/virtual-environments-104c62d48c54)\n",
     "    + [The Definitive Guide to Conda Environments](https://towardsdatascience.com/a-guide-to-conda-environments-bc6180fc533)\n",
     "\n",
-    "+ We will be using a Conda environment named `fmad` for this course. To create the environment we will use the *Anaconda Terminal (or Anaconda Prompt)*. Hit the Windows key and begin typing *Anaconda*. You should see results like this: \n",
-    "\n",
-    "    <img src=\"fig/002-AnacondaWindowsMenu.PNG\" width=30%/>\n",
-    "    \n",
-    "    The Anaconda Navigator is a GUI interface to manage your Anaconda setup. Some people like it a lot, but we will be using mostly the (old school) terminal-based command-line approach. Thus, start the *Anaconda Prompt* and a window like this one will open:\n",
-    "\n",
-    "    <img src=\"fig/003-AnacondaPrompt.PNG\" width=50%/>\n",
-    "    \n",
-    "    This terminal window is where most of our *Python management* will occur (but not the actual coding!)\n",
+    "+ We will be using a Conda environment named `fmad` for this course. To create the environment we will keep working in the terminal (make sure that you exited Python in the previous step, you must be in a regular terminal prompt for this step to work). \n",
     "    \n",
     "+ In that prompt execute the command \n",
     "\n",
@@ -212,12 +202,9 @@
     "    \n",
     "    and after some moments something like this should happen  \n",
     "\n",
-    "    <img src=\"fig/004-AnacondaEnvironmentCreate01.png\" width=50%/>\n",
+    "    <img src=\"fig/004-AnacondaEnvironmentCreate-MacOS-01.png\" width=50%/>\n",
     "    \n",
-    "    For the time being ignore the warning about updating Conda it it appears (we will deal with it in the next step) and just answer *y* and hit *Enter*. A successful environment creation looks like:\n",
-    "\n",
-    "    <img src=\"fig/004-AnacondaEnvironmentCreate02.png\" width=30%/>\n",
-    "    "
+    "    For the time being ignore the warning about updating Conda if it appears (we will deal with it in the next step) and just answer *y* and hit *Enter*.    "
    ]
   },
   {
@@ -231,7 +218,7 @@
     "\n",
     "    `conda update -n base -c defaults conda`\n",
     "    \n",
-    "    As the following picture illustrates conda will present you with a summary of the update operation. Answer *y* and hit *Enter*.\n",
+    "    As the following picture illustrates conda will present you with a summary of the update operation. The picture is from Windows but the MacOS version is almost identical. Answer *y* and hit *Enter*.\n",
     "    \n",
     "     <img src=\"fig/005-UpdatingConda01.png\" width=50%/>\n",
     "     \n",
@@ -336,7 +323,7 @@
    "id": "bd7348d2",
    "metadata": {},
    "source": [
-    "### Final Remarks for Windows Users\n",
+    "### Final Remarks \n",
     "\n",
     "+ The terminal window that you used to start Jupyter should remain open during all the work session. **Be careful:** Closing it can make the server crash and you may lose part of your work.\n",
     "\n",
@@ -352,44 +339,6 @@
     "    \n",
     "  The prompt will change to indicate that you are back to the `base` conda environment. You can now close the terminal window as well if you wish. "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5a560157",
-   "metadata": {},
-   "source": [
-    "## MacOS computers\n",
-    "\n",
-    "+ MacOS includes a *system version* of Python. We will not be using that version but we need to make sure that it does not interfere with our work and that the basic functioning of your computer is not affected. Always keep recent backups of your data before any complex setup like this!\n",
-    "+ "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "772602a8",
-   "metadata": {},
-   "source": [
-    "## Linux computers\n",
-    "\n",
-    "+ Most recent versions of Linux already come \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4972ae00",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2c5075c0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -409,6 +358,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
