--- a/01-Software_Setup_Windows_Version.ipynb
+++ b/01-Software_Setup_Windows_Version.ipynb
@@ -5,7 +5,18 @@
    "id": "d362c974",
    "metadata": {},
    "source": [
-    "# Software Setup, Windows Version"
+    "<img src='./fig/vertical_COMILLAS_COLOR.jpg' style= 'width:70mm'>\n",
+    "<h2 style='font-family: Optima;color:#ecac00'>\n",
+    "Máster en Big Data. Tecnología y Analítica Avanzada (MBD).\n",
+    "</h2>\n",
+    "</br>\n",
+    "<h2 style='font-family: Optima;color:#ecac00'>\n",
+    "Fundamentos Matemáticos del Análisis de Datos (FMAD). 2022-2023.\n",
+    "</h2>\n",
+    "\n",
+    "<h1 style='font-family: Optima;color:#ecac00'>\n",
+    "Software Setup, Windows Version\n",
+    "</h1>\n"
    ]
   },
   {
@@ -426,35 +437,12 @@
    "source": [
     "## Jupyter extensions\n",
     "\n",
+    "+ If we need to install the extensions, please run this command:\n",
+    "\n",
     "```\n",
     "conda install -n fmad jupyter_contrib_nbextensions\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8700cd37",
-   "metadata": {},
-   "source": [
-    "# References"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "662107a4",
-   "metadata": {},
-   "source": [
-    "+ For a long time the [The Hitchhiker’s Guide to Python](https://docs.python-guide.org) was one of my favorite resources for Python setup and management. However, recently I have had less success applying its recommendations. It is still a good starting point to keep as a reference but be sure to double check with another recent source for any critical operation. \n",
-    "+ [GitHub repository for the 2021-22 R-based version of this course.](https://github.com/mbdfmad/fmad2122)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2c5075c0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
