--- a/01M-Software_Setup_MacOS_Version.ipynb
+++ b/01M-Software_Setup_MacOS_Version.ipynb
@@ -5,7 +5,18 @@
    "id": "73017b73",
    "metadata": {},
    "source": [
-    "# Software Setup, MacOS Version"
+    "<img src='./fig/vertical_COMILLAS_COLOR.jpg' style= 'width:70mm'>\n",
+    "<h2 style='font-family: Optima;color:#ecac00'>\n",
+    "Máster en Big Data. Tecnología y Analítica Avanzada (MBD).\n",
+    "</h2>\n",
+    "</br>\n",
+    "<h2 style='font-family: Optima;color:#ecac00'>\n",
+    "Fundamentos Matemáticos del Análisis de Datos (FMAD). 2022-2023.\n",
+    "</h2>\n",
+    "\n",
+    "<h1 style='font-family: Optima;color:#ecac00'>\n",
+    "Software Setup, MacOS Version\n",
+    "</h1  "
    ]
   },
   {
@@ -25,7 +36,7 @@
     "\n",
     "+ Please, read this document completely before starting your setup, so as to get a general idea of what is coming. In particular, please read the final [*Alternative Setups*](#AlternativeSetups) section. If you have any doubts, we are happy to help.\n",
     "+ **Be careful!** Another reason to read this document in advance is that we have seen too often users ruining their Python setups because of a rushed decision. Wrecking your system can be a matter of minutes, getting it back can take you hours or even days. \n",
-    "Don't let the cartoon below be you!! When in doubt, please talk to us first.\n",
+    "Don't let the cartoon below be you!! When in doubt, please talk to us first.  \n",
     "![](fig/XKCD_python_environment.png)  \n",
     "\n",
     "*Image from [XKCD](https://xkcd.com/1987/)* \n",
@@ -338,6 +349,20 @@
     "  `conda deactivate`\n",
     "    \n",
     "  The prompt will change to indicate that you are back to the `base` conda environment. You can now close the terminal window as well if you wish. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b52e5bde",
+   "metadata": {},
+   "source": [
+    "## Jupyter extensions\n",
+    "\n",
+    "+ If we need to install the extensions, please run this command:\n",
+    "\n",
+    "```\n",
+    "conda install -n fmad jupyter_contrib_nbextensions\n",
+    "```"
    ]
   }
  ],
