--- a/02-Exploratory Data Analysis.ipynb
+++ b/02-Exploratory Data Analysis.ipynb
@@ -2,6 +2,25 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "7c2d26f2",
+   "metadata": {},
+   "source": [
+    "<img src='./fig/vertical_COMILLAS_COLOR.jpg' style= 'width:70mm'>\n",
+    "<h1 style='font-family: Optima;color:#ecac00'>\n",
+    "Máster en Big Data. Tecnología y Analítica Avanzada (MBD).\n",
+    "</h2>\n",
+    "</br>\n",
+    "<h1 style='font-family: Optima;color:#ecac00'>\n",
+    "Fundamentos Matemáticos del Análisis de Datos (FMAD). 2022-2023.\n",
+    "</h2>\n",
+    "\n",
+    "<h1 style='font-family: Optima;color:#ecac00'>\n",
+    "02 Exploratory Data Analysis\n",
+    "</h1  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7c678edc",
    "metadata": {
     "slideshow": {
