Fixing typos in first session notes

--- a/01-Software_Setup_Windows_Version.ipynb
+++ b/01-Software_Setup_Windows_Version.ipynb
@@ -29,6 +29,7 @@
     "+ Please, read this document completely before starting your setup, so as to get a general idea of what is coming. In particular, please read the final [*Alternative Setups*](#AlternativeSetups) section. If you have any doubts, we are happy to help.\n",
     "+ **Be careful!** Another reason to read this document in advance is that we have seen too often users ruining their Python setups because of a rushed decision. Wrecking your system can be a matter of minutes, getting it back can take you hours or even days. \n",
     "Don't let the cartoon below be you!! When in doubt, please talk to us first.\n",
+    "\n",
     "![](fig/XKCD_python_environment.png)  \n",
     "\n",
     "*Image from [XKCD](https://xkcd.com/1987/)* \n",
@@ -188,7 +189,7 @@
     "    \n",
     "+ When setup is completed you will see something like this:\n",
     "\n",
-    "    <img src=\"fig/001-AnacondaSetup03.PNG\" width=50%/>\n",
+    "    <img src=\"fig/001-AnacondaSetup03.png\" width=50%/>\n",
     "    \n",
     "    Click on *Next* and do the same in the final dialogs (consisting in software ads and tutorials, we suggest to skip all of them). \n",
     "\n",
