Fixing typos in first session notes

--- a/01-Software_Setup_Windows_Version.ipynb
+++ b/01-Software_Setup_Windows_Version.ipynb
@@ -211,11 +211,11 @@
     "\n",
     "+ We will be using a Conda environment named `fmad` for this course. To create the environment we will use the *Anaconda Terminal (or Anaconda Prompt)*. Hit the Windows key and begin typing *Anaconda*. You should see results like this: \n",
     "\n",
-    "    <img src=\"fig/002-AnacondaWindowsMenu.PNG\" width=30%/>\n",
+    "    <img src=\"fig/002-AnacondaWindowsMenu.png\" width=30%/>\n",
     "    \n",
     "    The Anaconda Navigator is a GUI interface to manage your Anaconda setup. Some people like it a lot, but we will be using mostly the (old school) terminal-based command-line approach. Thus, start the *Anaconda Prompt* and a window like this one will open:\n",
     "\n",
-    "    <img src=\"fig/003-AnacondaPrompt.PNG\" width=50%/>\n",
+    "    <img src=\"fig/003-AnacondaPrompt.png\" width=50%/>\n",
     "    \n",
     "    This terminal window is where most of our *Python management* will occur (but not the actual coding!)\n",
     "    \n",
