Fixing typos in first session notes

--- a/02-Exploratory Data Analysis.ipynb
+++ b/02-Exploratory Data Analysis.ipynb
@@ -80,7 +80,8 @@
     "\n",
     "+ In this case opening the file in a text editor (BBedit in the Mac here) shows something like this (only the first few lines are shown):\n",
     "\n",
-    "![](fig/010-movies_csv_open_text_editor.png)\n",
+    "<img src='./fig/010-movies_csv_open_text_editor.png' style= 'width:300mm'>\n",
+    "\n",
     "\n",
     "+ There are some key ingredients of such files that you need to pay attention to here, even in simple cases like this first example:\n",
     "    + Each line of the file corresponds to a row of the data table. \n",
