--- a/02-Exploratory Data Analysis.ipynb
+++ b/02-Exploratory Data Analysis.ipynb
@@ -76,7 +76,7 @@
     "\n",
     "[movies.csv](https://gist.githubusercontent.com/tiangechen/b68782efa49a16edaf07dc2cdaa855ea/raw/0c794a9717f18b094eabab2cd6a6b9a226903577/movies.csv)\n",
     "\n",
-    "+ Before proceeding to read the file with Python **you should always begin examining the contents of a data file with a text editor** (such as `Notepad++` in Windows or BBedit in Mac). Not doing so will often result in bad data processing downstream. Please refrain from using spreadsheet programs like `Excel` for this exploratory tasks. Not only will it fail too often, in some cases it can lead to data loss.\n",
+    "+ Before proceeding to read the file with Python **you should always begin examining the contents of a data file with a text editor** (such as `Notepad++` in Windows or BBedit in Mac). Not doing so will often result in bad data processing downstream.\n",
     "\n",
     "+ In this case opening the file in a text editor (BBedit in the Mac here) shows something like this (only the first few lines are shown):\n",
     "\n",
