Fixing typos in first session notes

--- a/01a_test_your_setup.ipynb
+++ b/01a_test_your_setup.ipynb
@@ -2,12 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "2264f1b6",
+   "metadata": {},
+   "source": [
+    "<img src='./fig/vertical_COMILLAS_COLOR.jpg' style= 'width:70mm'>\n",
+    "<h1 style='font-family: Optima;color:#ecac00'>\n",
+    "Máster en Big Data. Tecnología y Analítica Avanzada (MBD).\n",
+    "</h1>\n",
+    "\n",
+    "<h1 style='font-family: Optima;color:#ecac00'>\n",
+    "Fundamentos Matemáticos del Análisis de Datos (FMAD). 2022-2023.\n",
+    "</h1>\n",
+    "\n",
+    "<h1 style='font-family: Optima;color:#ecac00'>\n",
+    "01a Python Setup Checks\n",
+    "</h1> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6eb2245e",
    "metadata": {},
    "source": [
-    "# Python Setup Checks\n",
     "\n",
-    "To test that your python setup is looking good please select the `Cell` menu above and click on `Run All`"
+    "**To test that your python setup is looking good please select the `Cell` menu above and click on `Run All`**\n"
    ]
   },
   {
@@ -1039,14 +1057,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "25f39dc5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "08d9caf97ef749e893fc4d10c11ace5c",
+       "model_id": "faa4da9ccbbe454983a9e50352c08925",
        "version_major": 2,
        "version_minor": 0
       },
