Fixing typos in first session notes

--- a/01M-Software_Setup_MacOS_Version.ipynb
+++ b/01M-Software_Setup_MacOS_Version.ipynb
@@ -29,7 +29,7 @@
     "<br>\n",
     "\n",
     "<span style='color:red;font-weight:bold'> \n",
-    "IF YOU WILL BE USING A RECENT MAC WITH AN APPLE SILICON PROCESSOR FOR THIS COURSE (M1, M2 ans similar processors) PLEASE TALK TO US BEFORE INSTALLING THE SOFTWARE BELOW. AND IF YOU ARE NOT SURE, LOOK IN THE APPLE MENU FOR THE \"ABOUT THIS MAC\" INFORMATION.\n",
+    "IF YOU WILL BE USING A RECENT MAC WITH AN APPLE SILICON PROCESSOR FOR THIS COURSE (M1, M2 and similar processors) PLEASE TALK TO US BEFORE INSTALLING THE SOFTWARE BELOW. AND IF YOU ARE NOT SURE, LOOK IN THE APPLE MENU FOR THE \"ABOUT THIS MAC\" INFORMATION.\n",
     "</span>\n",
     "\n",
     "## Before you proceed\n",
