Fixing typos in first session notes

--- a/01a_test_your_setup.ipynb
+++ b/01a_test_your_setup.ipynb
@@ -499,7 +499,9 @@
    "id": "9a5bae87",
    "metadata": {},
    "source": [
-    "## Some final fun for the session"
+    "## Some final fun for the session\n",
+    "\n",
+    "+ Create a subfolder called `data` in the same folder that contains your Jupyter notebooks for this session  Download the [data set in this link](https://raw.githubusercontent.com/mbdfmad/fmad2223/main/data/gapminder.csv)  to that folder ."
    ]
   },
   {
