--- a/02-Exploratory Data Analysis.ipynb
+++ b/02-Exploratory Data Analysis.ipynb
@@ -8,14 +8,17 @@
     "<img src='./fig/vertical_COMILLAS_COLOR.jpg' style= 'width:70mm'>\n",
     "<h1 style='font-family: Optima;color:#ecac00'>\n",
     "Máster en Big Data. Tecnología y Analítica Avanzada (MBD).\n",
-    "</h2>\n",
+    "<a class=\"tocSkip\">\n",
+    "</h1>\n",
     "\n",
     "<h1 style='font-family: Optima;color:#ecac00'>\n",
     "Fundamentos Matemáticos del Análisis de Datos (FMAD). 2022-2023.\n",
-    "</h2>\n",
+    "<a class=\"tocSkip\">\n",
+    "</h1>\n",
     "\n",
     "<h1 style='font-family: Optima;color:#ecac00'>\n",
     "02 Exploratory Data Analysis\n",
+    "<a class=\"tocSkip\">    \n",
     "</h1>  "
    ]
   },
@@ -28,7 +31,7 @@
     }
    },
    "source": [
-    "## <span style='background:yellow; color:red'> Remember:</span>\n",
+    "## <span style='background:yellow; color:red'> Remember:<a class=\"tocSkip\"> </span>     \n",
     "\n",
     "+ Navigate to your `fmad2223` folder in the console  \n",
     "+ Execute `git pull origin main` to update the code\n",
