WIP Session 03 and typos

--- a/02-Exploratory Data Analysis.ipynb
+++ b/02-Exploratory Data Analysis.ipynb
@@ -2773,7 +2773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 1,
    "id": "71c24b7b",
    "metadata": {
     "tags": [
@@ -2788,7 +2788,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [206]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# getPlot = auto2['price'].plot.box(figsize=(10, 8))\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m getPlot \u001b[38;5;241m=\u001b[39m \u001b[43mauto2\u001b[49m\u001b[38;5;241m.\u001b[39mboxplot(column\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mprice\u001b[39m\u001b[38;5;124m'\u001b[39m, figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m6\u001b[39m, \u001b[38;5;241m8\u001b[39m))\n",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# getPlot = auto2['price'].plot.box(figsize=(10, 8))\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m getPlot \u001b[38;5;241m=\u001b[39m \u001b[43mauto2\u001b[49m\u001b[38;5;241m.\u001b[39mboxplot(column\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mprice\u001b[39m\u001b[38;5;124m'\u001b[39m, figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m6\u001b[39m, \u001b[38;5;241m8\u001b[39m))\n",
       "\u001b[0;31mNameError\u001b[0m: name 'auto2' is not defined"
      ]
     }
@@ -3176,7 +3176,7 @@
    "id": "67601ff7",
    "metadata": {},
    "source": [
-    "+ We want to convert `Genre` and `Lead Studio` to factors, but no `Film` (which is a title) or `Worlwide Gross` that is really numeric but needs a special treatment (we'll see about that later in the course). "
+    "+ We want to convert `Genre` and `Lead Studio` to factors, but not `Film` (which is a title) or `Worlwide Gross` that is really numeric but needs a special treatment (we'll see about that later in the course). "
    ]
   },
   {
